WebContent/VAADIN/themes/base/formlayout/formlayout.css
.v-formlayout.v-has-width > table {
	width: 100%;
}
.v-formlayout.v-has-height > table {
	height: 100%;
}
.v-formlayout-cell .v-errorindicator {
	display: block;
}
.v-formlayout-error-indicator {
	/* fix width so layout is not jumpy when error disappears */
	width: 12px;
}
.v-formlayout-captioncell {
	text-align:right;
	white-space: nowrap;
}
.v-formlayout.v-has-width > table > tbody > tr > td.v-formlayout-contentcell {
	width: 100%;
}
.v-formlayout-captioncell .v-caption {
	overflow: visible;
}
.v-formlayout-spacing .v-formlayout-row .v-formlayout-captioncell, 
.v-formlayout-spacing .v-formlayout-row .v-formlayout-contentcell,
.v-formlayout-spacing .v-formlayout-row .v-formlayout-errorcell {
	padding-top: 6px;
}
.v-formlayout-spacing .v-formlayout-firstrow .v-formlayout-captioncell, 
.v-formlayout-spacing .v-formlayout-firstrow .v-formlayout-contentcell,
.v-formlayout-spacing .v-formlayout-firstrow .v-formlayout-errorcell {
	padding-top: 0;
}
.v-formlayout-margin-top .v-formlayout-firstrow .v-formlayout-captioncell, 
.v-formlayout-margin-top .v-formlayout-firstrow .v-formlayout-contentcell,
.v-formlayout-margin-top .v-formlayout-firstrow .v-formlayout-errorcell {
	padding-top: 12px;
}
.v-formlayout-margin-bottom .v-formlayout-lastrow .v-formlayout-captioncell,
.v-formlayout-margin-bottom .v-formlayout-lastrow .v-formlayout-contentcell,
.v-formlayout-margin-bottom .v-formlayout-lastrow .v-formlayout-errorcell {
	padding-bottom: 12px;
}
.v-formlayout-margin-left .v-formlayout-captioncell {
	padding-left: 12px;
} 
.v-formlayout-margin-right .v-formlayout-contentcell {
	padding-right: 12px;
}
.v-formlayout-captioncell .v-caption .v-required-field-indicator {
	float: none;
}

